# MUi-designer

./: .npmrc  CHANGELOG.md  DEBUG_REPORT.md  DEVELOPMENT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
src/components/: Canvas.tsx  CodeViewer.tsx  ComponentsPanel.tsx  ImageLibrary.tsx  PropertiesPanel.tsx  Toolbar.tsx  ViewControls.tsx
src/styles/: App.css  global.css
