[package]
name = "mui-designer"
version = "0.1.0"
description = "Visual editor for ESP32/RP2040 display UI design"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.19"

[features]
custom-protocol = ["tauri/custom-protocol"]
